Ô ªøcmake_minimum_required(VERSION 2.8)
#–ü—Ä–æ–≤–µ—Ä–∫–∞ –≤–µ—Ä—Å–∏–∏ CMake.
    set(PROJECT_NAME TMStack)
#–°–æ–∑–¥–∞–µ–º –æ–±—ã—á–Ω—É—é –ª–æ–∫–∞–ª—å–Ω—É—é –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é —Å –∏–º–µ–Ω–µ–º –ø—Ä–æ–µ–∫—Ç–∞
    project($
	    {
	    PROJECT_NAME}

)
#–ù–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–µ–∫—Ç–∞
    set(MStack MStack)
    set(MStackLib MStackLib)
#–ü–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å –∏–º–µ–Ω–µ–º –±–∏–±–ª–∏–æ—Ç–µ–∫–∏
    set(MStackTest MStackTest)
    set(ExceptionLib ExceptionLib)
    set(StackLib StackLib)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs"
	FORCE)
    if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
	endif()
	file(GLOB hdrs "*.h*")
	file(GLOB srcs "*.cpp")
#add_executable(${PROJECT_NAME} ${srcs} ${hdrs})
	include_directories($
			    {
			    CMAKE_CURRENT_SOURCE_DIR}
			    /gtest)
    add_subdirectory(gtest)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/ExceptionLib)
    add_subdirectory(ExceptionLib)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/MStackLib)
    add_subdirectory(MStack)
    add_subdirectory(MStackLib)
    add_subdirectory(MStackTest)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/StackLib)
    add_subdirectory(StackLib)
